flowise/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowise
  namespace: flowise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flowise
  template:
    metadata:
      labels:
        app: flowise
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: flowise
        image: flowiseai/flowise:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: flowise-data
          mountPath: /root/.flowise
      volumes:
      - name: flowise-data
        persistentVolumeClaim:
          claimName: flowise-data
