flowise/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flowise
  namespace: flowise
spec:
  selector:
    app: flowise
  ports:
  - port: 80
    targetPort: 3000
