flowise/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowise-ingress
  namespace: flowise
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
  - host: flowise.aooba.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flowise
            port:
              number: 80
